--- a/package.json
+++ b/package.json
@@ -9,13 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.2.9",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
+    "framer-motion": "^11.0.6",
     "next": "14.1.0",
     "react": "^18",
     "react-animated-numbers": "^0.18.0",
+    "react-d3-speedometer": "^2.2.1",
     "react-dom": "^18",
-    "react-intersection-observer": "^9.8.1"
+    "react-fast-marquee": "^1.6.4",
+    "react-gauge-chart": "^0.4.1",
+    "react-icons": "^5.0.1",
+    "react-intersection-observer": "^9.8.1",
+    "react-tilt": "^1.0.2",
+    "swiper": "^11.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
