--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "classnames": "^2.5.1",
     "framer-motion": "^11.0.6",
     "next": "14.1.0",
+    "next-auth": "^4.24.6",
     "react": "^18",
     "react-animated-numbers": "^0.18.0",
     "react-d3-speedometer": "^2.2.1",
