--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed": "ts-node src/seed/seed-database.ts"
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
+    "@prisma/client": "^5.10.2",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
+    "clsx": "^2.1.0",
     "framer-motion": "^11.0.6",
     "next": "14.1.0",
-    "next-auth": "^4.24.6",
+    "next-auth": "^5.0.0-beta.15",
     "react": "^18",
     "react-animated-numbers": "^0.18.0",
     "react-d3-speedometer": "^2.2.1",
@@ -24,7 +27,9 @@
     "react-icons": "^5.0.1",
     "react-intersection-observer": "^9.8.1",
     "react-tilt": "^1.0.2",
-    "swiper": "^11.0.7"
+    "slugify": "^1.6.6",
+    "swiper": "^11.0.7",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -34,7 +39,9 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
+    "prisma": "^5.10.2",
     "tailwindcss": "^3.3.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
