--- a/.env.template
+++ b/.env.template
@@ -1,7 +1,7 @@
-DB_USER=postgres
-DB_NAME=luc
-DB_PASSWORD=123456
+DB_USER=
+DB_NAME=
+DB_PASSWORD=
 
 # openssl rand -base64 32
-AUTH_SECRET="F6FWrz6HUW5zqFovSgVuwsht6lkCsWvb9A+61KfmerI="
+AUTH_SECRET=""
 
