--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
     "@prisma/client": "^5.10.2",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.6",
     "next": "14.1.0",
-    "next-auth": "^5.0.0-beta.15",
+    "next-auth": "^4.24.6",
     "react": "^18",
     "react-animated-numbers": "^0.18.0",
     "react-d3-speedometer": "^2.2.1",
@@ -29,9 +30,11 @@
     "react-tilt": "^1.0.2",
     "slugify": "^1.6.6",
     "swiper": "^11.0.7",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
