--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "slugify": "^1.6.6",
     "swiper": "^11.0.7",
     "uuid": "^9.0.1",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
